HVAC Backup 2/objects/Assessment_Questions__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Option_1__c</fullName>
        <label>Answer Option 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Option_2__c</fullName>
        <label>Answer Option 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Option_3__c</fullName>
        <label>Answer Option 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Answer__c</fullName>
        <label>Correct Answer</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Skill_Type__c</fullName>
        <label>Question Skill Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Breakdown</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Regular Service</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>PMS</fullName>
                </value>
                <value>
                    <fullName>PDI</fullName>
                </value>
                <value>
                    <fullName>Common</fullName>
                </value>
                <value>
                    <fullName>CPSD</fullName>
                </value>
                <value>
                    <fullName>CPAG/CRBG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <type>TextArea</type>
    </fields>
    <label>Assessment Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Question_Skill_Type__c</columns>
        <columns>NAME</columns>
        <columns>Correct_Answer__c</columns>
        <columns>Question_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Regular_Service</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <columns>Question_Skill_Type__c</columns>
        <columns>Correct_Answer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Question_Skill_Type__c</field>
            <operation>equals</operation>
            <value>Regular Service</value>
        </filters>
        <label>Regular Service</label>
    </listViews>
    <nameField>
        <displayFormat>As-{0000}</displayFormat>
        <label>Assessment Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>